// Generated file
import "ccsds_mal/types.proto";
import "file/ProfileRight.proto";
import "file/UserRight.proto";


package file.protobuf;

message Folder {
extensions 4 to 104;

  repeated file.protobuf.ProfileRight profilesAccess = 1;
  repeated file.protobuf.UserRight usersAccess = 2;
  optional ccsds_mal.protobuf.URI path = 3;
}
